[tool.poetry]
name = "hotaru"
version = "5.0.0-rc0"
description = "High performance Optimizer to extract spike Timing And cell location from calcium imaging data via lineaR impUlse"
license = "GPL-3.0-only"
authors = [
    "TAKEKAWA Takashi <takekawa@tk2lab.org>",
]
readme = 'README.md'
repository = "https://github.com/tk2lab/HOTARU"
keywords = [
    "Calcium Imaging",
    "Spike Detection",
    "Cell Extraction",
]
classifiers = [
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
]

[build-system]
requires = ["poetry-core>=1.2.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.dependencies]
python = ">=3.10,<3.12"
jax = { extras = ["cuda11-cudnn86"], version = "^0.4.7" }

tifffile = "^2022.8"
pandas = "^1.5"
av = "^10.0.0"

setuptools = "^67.6.1"
hydra-core = "^1.3"
tqdm = "^4.64"

dash = "^2.8.1"
dash-bootstrap-components = "^1.4.1"
diskcache = "^5.6.1"

[tool.poetry.scripts]
hotaru = "hotaru.main:main"

[[tool.poetry.source]]
name = "jax"
url = "https://storage.googleapis.com/jax-releases/jax_cuda_releases.html"
default = false
secondary = true

[tool.isort]
profile = "black"
multi_line_output = 3
force_grid_wrap = 2

[tool.black]
target-version = ["py310"]

[tool.flake8]
max-line-length = 88
extend-ignore = ["E203"]

[tool.pytest.ini_options]
filterwarnings = [
    #"ignore:the imp module is deprecated:DeprecationWarning",
]

[tool.tox]
legacy_tox_ini = """
[tox]
min_version = 4.0
envlist =
    lint
    py311
isolated_build = True

[gh-actions]
python =
    3.10: py310
    3.11: py311

[testenv:lint]
basepython = python3.10
skip_install = True
deps =
    isort
    black
    flake8
    pyproject-flake8
commands =
    isort src
    black src
    pflake8 src

[testenv:app]
basepython = python3.10
commands =
    {envpython} -m {posargs}

[testenv:py{310,311}]
changedir = sample
commands =
    python -m hotaru
"""
