[tool.poetry]
name = "hotaru"
version = "5.0.0-rc0"
description = "High performance Optimizer to extract spike Timing And cell location from calcium imaging data via lineaR impUlse"
license = "GPL-3.0-only"
authors = [
    "TAKEKAWA Takashi <takekawa@tk2lab.org>",
]
readme = 'README.md'
repository = "https://github.com/tk2lab/HOTARU"
keywords = [
    "Calcium Imaging",
    "Spike Detection",
    "Cell Extraction",
]
classifiers = [
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
]

[build-system]
requires = ["poetry-core>=1.5"]
build-backend = "poetry.core.masonry.api"

[[tool.poetry.source]]
name = "PyPI"
priority = "primary"

[[tool.poetry.source]]
name = "jax"
url = "https://storage.googleapis.com/jax-releases/jax_releases.html"
priority = "explicit"

[[tool.poetry.source]]
name = "jax-cuda"
url = "https://storage.googleapis.com/jax-releases/jax_cuda_releases.html"
priority = "explicit"

[tool.poetry.dependencies]
python = ">=3.10,<3.12"
jax = "^0.4"
jaxlib = [
    { version = "^0.4", platform = "linux", source = "jax-cuda" },
    { version = "^0.4", platform = "darwin", source = "jax" },
]

tifffile = "^2022.8"
pandas = "^2.0.3"
av = "^10.0"

plotly = "^5.0.0"
kaleido = "0.2.1"

#setuptools = "^67.6.1"
hydra-core = "^1.3"
tqdm = "^4.64"

dash = { version = "^2.8.1", extras=["diskcache"] }
dash-bootstrap-components = "^1.4.1"
dash-mantine-components = "^0.12.1"
tensorboard-plugin-profile = "^2.13.1"
tensorflow = "^2.13.0"
rich = "^13.5.2"

[tool.poetry.scripts]
hotaru = "hotaru.__main__:main"

[tool.poetry.group.dev.dependencies]
ruff = "^0.0.277"
black = "^23.3.0"
isort = "^5.12.0"

[tool.ruff]
target-version = "py310"
select = ["F", "E", "W", "N"]

[tool.black]
target-version = ["py310", "py311"]

[tool.isort]
profile = "black"
multi_line_output = 3
force_grid_wrap = 2

[tool.tox]
legacy_tox_ini = """
[tox]
min_version = 4.0
envlist =
    py311
isolated_build = True

[gh-actions]
python =
    3.10: py310
    3.11: py311

[testenv:py{310,311}]
changedir = sample
commands =
    hotaru

[testenv:app]
basepython = python3.10
commands =
    {envpython} -m {posargs}
"""
